# sea-orm-dbml

./: .gitignore  Cargo.toml  README.md  makefile
src/: dbml.pest  lib.rs  main.rs
src/analyzer/: block.rs  err.rs  indexer.rs  mod.rs
src/ast/: enums.rs  indexes.rs  mod.rs  project.rs  refs.rs  schema.rs  table.rs  table_group.rs
src/compiler/: config.rs  err.rs  mod.rs  traits.rs
src/generator/: mod.rs
src/parser/: mod.rs
src/transpiler/: config.rs  err.rs  mod.rs  traits.rs
tests/: mod.rs  sample_1.dbml
tests/dbml/: array_type.in.dbml  comment.in.dbml  default_tables.in.dbml  enum_tables.in.dbml  general_schema.in.dbml  header_color_tables.in.dbml  index_tables.in.dbml  multiline_string.in.dbml  project.in.dbml  referential_actions.in.dbml  sample_1.dbml  sea_orm_bakery.dbml  sea_orm_codegen.dbml  table_element.in.dbml  table_group.in.dbml  table_settings.in.dbml
