[package]
name = "sea-orm-dbml"
description = "Database Markup Language (DBML) transpiler for SeaORM entity."
license = "MIT OR Apache-2.0"
repository = "https://github.com/apskhem/sea-orm-dbml"
readme = "README.md"
authors = ["Apisit Ritreungroj <cyber1.record@gmail.com>"]
keywords = ["transpiler", "orm"]
categories = ["database"]
version = "0.1.0"
edition = "2021"

[dependencies]
dbml-rs = { git = "https://github.com/apskhem/dbml-rs", branch = "main" }
Inflector = "0.11"

[dev-dependencies]
sea-orm = { version = "0.10" }